Sync all content

--- a/content/resources/18-755f04-th.md
+++ b/content/resources/18-755f04-th.md
@@ -4,6 +4,8 @@ description: New image Upload
 file: /courses/18-755-introduction-to-lie-groups-fall-2004/ad9b6bd48c172cfa9d802e4b4b917ea4_18-755f04-th.jpg
 file_size: 5545
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: The adjoint group. (Image by Prof. Sigurdur Helgason.)
   credit: ''
