--- a/content/resources/18-755f04.md
+++ b/content/resources/18-755f04.md
@@ -4,6 +4,8 @@ description: The adjoint group. (Image by Prof. Sigurdur Helgason.)
 file: /courses/18-755-introduction-to-lie-groups-fall-2004/b1061f3c51168f06a49c00484b0d175d_18-755f04.jpg
 file_size: 41741
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: The adjoint group. (Image by Prof. Sigurdur Helgason.)
   credit: ''
